# dqm4hep-qt-logging-gui

./: CMakeLists.txt  Readme.md
include/: MainWindow.h
src/: MainWindow.cc  dqm4hep-qt-logging-gui.cc
